WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171981
Fix a spelling mistake in ApplePayErrorCode
https://bugs.webkit.org/show_bug.cgi?id=171981
Summary
Fix a spelling mistake in ApplePayErrorCode
Andy Estes
Reported
2017-05-11 11:22:38 PDT
Fix a spelling mistake in ApplePayErrorCode
Attachments
Patch
(4.58 KB, patch)
2017-05-11 11:54 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2017-05-11 11:23:41 PDT
rdar://problem/32136567
Andy Estes
Comment 2
2017-05-11 11:54:27 PDT
Created
attachment 309740
[details]
Patch
WebKit Commit Bot
Comment 3
2017-05-11 13:30:16 PDT
Comment on
attachment 309740
[details]
Patch Clearing flags on attachment: 309740 Committed
r216691
: <
http://trac.webkit.org/changeset/216691
>
WebKit Commit Bot
Comment 4
2017-05-11 13:30:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug