Fix a spelling mistake in ApplePayErrorCode https://bugs.webkit.org/show_bug.cgi?id=171981 <rdar://problem/32136567>

Reviewed by Beth Dakin.

Source/WebCore:

* Modules/applepay/ApplePayError.idl:
* Modules/applepay/PaymentRequest.h:

Source/WebKit2:

* UIProcess/ApplePay/cocoa/WebPaymentCoordinatorProxyCocoa.mm:
(WebKit::toPKPaymentErrorCode):
(WebKit::toPKPaymentAuthorizationStatus):


Canonical link: https://commits.webkit.org/188911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216691 268f45cc-cd09-0410-ab3c-d52691b4dbfc